update code for patch training
patch trainer, loss function, dataset tools,  patch configuration, printable RGB triplets from Thys et al, Ultralytics utils

--- a/config.json
+++ b/config.json
@@ -1,25 +1,22 @@
 {
-    "image_dir": "data/visdrone_data/VisDrone2019-DET-train/images",
-    "label_dir": "data/visdrone_data/VisDrone2019-DET-train/labels",
-    "val_image_dir": "data/visdrone_data/VisDrone2019-DET-val/images",
-    "use_even_odd_images": "all",
+    "image_dir": "dataset/All-Day-Vehicle-Recognition-3/train/images",
+    "label_dir": "dataset/All-Day-Vehicle-Recognition-3/train/labels",
+    "val_image_dir": "dataset/All-Day-Vehicle-Recognition-3/valid/images",
     "log_dir": "runs/train_adversarial",
     "tensorboard_port": 8994,
     "tensorboard_batch_log_interval": 15,
-    "weights_file": "runs/train/s_coco_e300_4Class_Vehicle/weights/best.pt",
-    "triplet_printfile": "adv_patch_gen/utils/30_rgb_triplets.csv",
-    "device": "cuda:0",
+    "weights_file": "yolov8m.pt",
+    "triplet_printfile": "30_rgb_triplets.csv",
     "use_amp": true,
     "patch_name": "base",
-    "val_epoch_freq": 100,
+    "val_epoch_freq": 1,
     "patch_save_epoch_freq": 1,
     "model_in_sz": [640, 640],
-    "patch_src": "gray",
-    "patch_img_mode": "RGB",
-    "patch_size": [64, 64],
-    "objective_class_id": null,
+    "patch_src": "random",
+    "patch_size": [300, 300],
+    "objective_class_id": 1,
     "min_pixel_area": null,
-    "augment_image": true,
+    "augment_image": false,
     "target_size_frac": [0.25, 0.40],
     "use_mul_add_gau": true,
     "mul_gau_mean": [0.5, 0.8],
@@ -32,20 +29,96 @@
     "patch_pixel_range": [0, 255],
     "patch_alpha": 1,
     "class_list": [
+        "person",
+        "bicycle",
         "car",
-        "van",
+        "motorcycle",
+        "airplane",
+        "bus",
+        "train",
         "truck",
-        "bus"
+        "boat",
+        "traffic light",
+        "fire hydrant",
+        "stop sign",
+        "parking meter",
+        "bench",
+        "bird",
+        "cat",
+        "dog",
+        "horse",
+        "sheep",
+        "cow",
+        "elephant",
+        "bear",
+        "zebra",
+        "giraffe",
+        "backpack",
+        "umbrella",
+        "handbag",
+        "tie",
+        "suitcase",
+        "frisbee",
+        "skis",
+        "snowboard",
+        "sports ball",
+        "kite",
+        "baseball bat",
+        "baseball glove",
+        "skateboard",
+        "surfboard",
+        "tennis racket",
+        "bottle",
+        "wine glass",
+        "cup",
+        "fork",
+        "knife",
+        "spoon",
+        "bowl",
+        "banana",
+        "apple",
+        "sandwich",
+        "orange",
+        "broccoli",
+        "carrot",
+        "hot dog",
+        "pizza",
+        "donut",
+        "cake",
+        "chair",
+        "couch",
+        "potted plant",
+        "bed",
+        "dining table",
+        "toilet",
+        "tv",
+        "laptop",
+        "mouse",
+        "remote",
+        "keyboard",
+        "cell phone",
+        "microwave",
+        "oven",
+        "toaster",
+        "sink",
+        "refrigerator",
+        "book",
+        "clock",
+        "vase",
+        "scissors",
+        "teddy bear",
+        "hair drier",
+        "toothbrush"
     ],
-    "n_classes": 4,
-    "n_epochs": 420,
-    "max_labels": 48,
+    "n_classes": 80,
+    "n_epochs": 50,
+    "max_labels": 200,
     "start_lr": 0.03,
     "min_tv_loss": 0.1,
-    "sal_mult": 1.0,
+    "sal_mult": 0,
     "tv_mult": 2.5,
-    "nps_mult": 0,
-    "batch_size": 8,
+    "nps_mult": 0.01,
+    "batch_size": 1,
     "debug_mode": false,
     "loss_target": "obj * cls"
 }
