gaussian noise multiplication and addition can be turned off on config

--- a/config_comet_ml.json
+++ b/config_comet_ml.json
@@ -3,7 +3,6 @@
     "label_dir": "./All-Day-Vehicle-Recognition-3/train/labels",
     "val_image_dir": "./All-Day-Vehicle-Recognition-3/valid/images",
     "log_dir": "runs/train_adversarial",
-    "tensorboard_port": 8994,
     "tensorboard_batch_log_interval": 450,
     "weights_file": "shrestha_visdrone.pt",
     "triplet_printfile": "30_rgb_triplets.csv",
@@ -19,7 +18,7 @@
     "min_pixel_area": null,
     "augment_image": false,
     "target_size_frac": [0.6, 0.15],
-    "use_mul_add_gau": true,
+    "use_mul_add_gau": false,
     "mul_gau_mean": [0.5, 0.8],
     "mul_gau_std": 0.1,
     "random_patch_loc": false,
